tests/compile_fail/handle_scope_lifetime_4.stderr
error[E0597]: `scope` does not live long enough
  --> tests/compile_fail/handle_scope_lifetime_4.rs:13:5
   |
12 |   let mut _scope3 = {
   |       ----------- borrow later stored here
13 |     v8::scope!(scope, &mut context_scope);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `scope` declared here
14 |     v8::EscapableHandleScope::new(scope)
15 |   };
   |   - `scope` dropped here while still borrowed
   |
   = note: this error originates in the macro `v8::scope` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `scope` does not live long enough
  --> tests/compile_fail/handle_scope_lifetime_4.rs:13:5
   |
12 |   let mut _scope3 = {
   |       ----------- borrow later stored here
13 |     v8::scope!(scope, &mut context_scope);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `scope` declared here
14 |     v8::EscapableHandleScope::new(scope)
15 |   };
   |   - `scope` dropped here while still borrowed
   |
   = note: this error originates in the macro `v8::scope` (in Nightly builds, run with -Z macro-backtrace for more info)
